resolve conflicts, align canvas and video properly

--- a/front-end/src/styling/TrackingAndConditions.css
+++ b/front-end/src/styling/TrackingAndConditions.css
@@ -42,23 +42,22 @@
   margin-top: 70px;
 }
 
-#trackCam {
-  position: "absolute";
-  marginleft: "auto";
-  marginright: "auto";
-  left: 0;
-  right: 0;
-  textalign: "center";
-  zindex: 9;
-  width: 640;
-  height: 480;
+.trackerContainer {
+  position: relative;
+  margin: 0 auto;
 }
 
-.size {
+.trackerVideo {
+  top: 0;
+  left: 0;
+}
+
+.canvas {
   position: absolute;
   top: 0;
   left: 0;
 }
+
 /*#trackCanvas {         */
 /*  position: "absolute";*/
 /*  marginleft: "auto";  */
